# capgenie

./: .gitignore  EXECUTABLE_BUILD_README.md  INSTALL.md  OPTIMIZATION_README.md  QUICK_FIX_WINDOWS.md  README.md  WINDOWS_BUILD_TROUBLESHOOTING.md  build-all-executables.sh  build-executable-mac.sh  build-executable-windows-optimized.bat  build-executable-windows.bat  capgenie-optimized.spec  capgenie.spec  flags.json  hook-readchar.py  pyproject.toml  requirements.txt  runtime-hook-readchar.py  setup.py  setup_platform.py  test_windows_build.py  writeup.docx
.github/workflows/: build-executables-release.yml  test-executables.yml  test-installation.yml
src/capgenie/: biodistribution.py  bubble.py  cli.py  denoise.cpp  enrichment.py  fast_processing.cpp  fast_processing.pyx  fast_string_ops.h  filter_count.cpp  fuzzy_match.cpp  mani.cpp  motif.py  platform_compat.h  prune_reads.cpp  search_aav9.py  spreadsheet.py  translate.cpp  translate.h
src/capgenie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
