[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capgenie"
version = "0.1.0"
description = "A bioinformatics tool for sequence analysis"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools]
packages = ["capgenie"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.scripts]
capgenie = "capgenie.cli:main"